...
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="Tree Map" />
        <item android:title="Treasured Tours"
            android:id="@+id/nav_tour"/>
        <item android:title="Search"
            android:id="@+id/searchbtn" />
        <item android:title="Last Visited Tree"
            android:id="@+id/nav_treeInfo" />
        <item android:id="@+id/nav_contact"
            android:title="Contact Information" />
        <item android:title="Add Tree "
            android:id="@+id/nav_treeEdit" />
        <item
            android:id="@+id/nav_registration"
            android:title="Register New User" />
        <item android:id="@+id/nav_login"
            android:title="Login" />
        <item android:id="@+id/nav_logout"
            android:title="Logout" />

    </group>

</menu>
